--- a/oildown-recipe.html
+++ b/oildown-recipe.html
@@ -85,10 +85,11 @@
 
                     <!-- recipe tags  -->
                     <div class="recipe-tags">
-                        Tags: <a href="tag-template.html">Beef</a>
-                        <a href="tag-template.html">Oil-down</a>
-                        <a href="tag-template.html">Pelau</a>
-                        <a href="tag-template.html">Breakfast</a>
+                        Tags: 
+                        <a href="https://www.196flavors.com/marshall-islands-macadamia-nut-pie/">Macadamia pie</a>
+                        <a href="https://www.196flavors.com/iraq-baharat/">Baharat</a>
+                        <a href="https://www.196flavors.com/nauru-coconut-mousse/">Coconut Mousse</a>
+                        <a href="https://www.196flavors.com/micronesia-chicken-kelaguen-finadene-sauce/">Chicken Kelaguen</a>
                     </div>
               </article>
           </section>
