--- a/patties-recipe.html
+++ b/patties-recipe.html
@@ -82,7 +82,8 @@
 
                     <!-- recipe tags  -->
                     <div class="recipe-tags-patties">
-                        Tags: <a href="https://flawlessfood.co.uk/spicy-curried-potato-wedges/#growMeRecommId=6063b0e2b7af58cb7bf6ac8f86136bec">Spicy Curried Potato Wedges</a>
+                        Tags: 
+                        <a href="https://flawlessfood.co.uk/spicy-curried-potato-wedges/#growMeRecommId=6063b0e2b7af58cb7bf6ac8f86136bec">Spicy Curried Potato Wedges</a>
                         <a href="https://flawlessfood.co.uk/spicy-chicken-burger/#growMeRecommId=6063b0e2b7af58cb7bf6ac8f86136bec">Spicy Chicken Burger</a>
                         <a href="https://flawlessfood.co.uk/roast-topside-beef-joint/#growMeRecommId=6063b0e2b7af58cb7bf6ac8f86136bec">Roast Topside Beef Joint</a>
                         <a href="https://flawlessfood.co.uk/beef-stir-fry-with-noodles/#growMeRecommId=6063b0e2b7af58cb7bf6ac8f86136bec">Beef Stir-fry with Noodles</a>
