took out tags in index

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <!-- recipe container -->
         <section class="recipes-container">
             <!-- tags container -->
-            <div class="tags-container">
+            <!-- <div class="tags-container">
                 <h4>recipes</h4>
                 <a href="tag-template.html">Beef (1)</a>
                 <a href="tag-template.html">Breakfast (2)</a>
                 <a href="tag-template.html">Carrots (3)</a>
                 <a href="tag-template.html">Food (4)</a>
-            </div>
+            </div> -->
             <!-- end of tags container -->
 
             <!-- recipe list -->
@@ -71,8 +71,7 @@
                     <img src="https://gracefoods.com/images/Recipes2017/cropped-Curried--oat.jpg" alt="curry goat"
                     class="img recipe-img"/>
                     <div class="card-body">
-                        <h5> Grenadian Curry Goat</h5>
-                       
+                        <h5> Grenadian Curry Goat</h5>                       
                     </div>
                 </a>
                     
