made changes to contact page

--- a/contact.html
+++ b/contact.html
@@ -79,34 +79,34 @@
 
         </section>
         <section class="featured-recipes">
-            <h5 class="featured-title">Featured Recipes</h5>
+            <!-- <h5 class="featured-title">Featured Recipes</h5> -->
             <!-- recipe list -->
             <div class="recipe-list">
                 <!-- Single recipe -->
-                <a href="single-recipe.html" class="recipe">
+                <!-- <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_4.jpg" alt="spoons"
                     class="img recipe-img"/>
                     <h5>Carne Asada</h5>
                     <p>Prep : 15mins | Cook : 5mins</p>
-                </a>
+                </a> -->
                 <!-- end of single recipe -->
 
                 <!-- Single recipe -->
-                <a href="single-recipe.html" class="recipe">
+                <!-- <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_2.jpg" alt="spoons"
                     class="img recipe-img"/>
                     <h5>Pelau</h5>
                     <p>Prep : 15mins | Cook : 5mins</p>
-                </a>
+                </a> -->
                 <!-- end of single recipe -->
 
                 <!-- Single recipe -->
-                <a href="single-recipe.html" class="recipe">
+                <!-- <a href="single-recipe.html" class="recipe">
                     <img src="./assets/recipe/recipe_3.jpg" alt="spoons"
                     class="img recipe-img"/>
                     <h5>Oil-down</h5>
                     <p>Prep : 15mins | Cook : 5mins</p>
-                </a>
+                </a> -->
                 <!-- end of single recipe -->
             </div>
             <!-- end of recipe list -->
